--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client-react-vite",
+  "name": "web-do-an",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -10,8 +10,7 @@
     "preview": "vite preview --port 8080",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "predeploy": "npm run build",
-    "deploy:git": "gh-pages -d dist",
-    "homepage": "https://Duy011201.github.io/client-react-vite/"
+    "deploy:git": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "~6.4.2",
