--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "deploy:git": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "~6.4.2",
     "@fortawesome/free-brands-svg-icons": "~6.4.2",
     "@fortawesome/free-regular-svg-icons": "~6.4.2",
     "@fortawesome/free-solid-svg-icons": "~6.4.2",
     "@fortawesome/react-fontawesome": "~0.2.0",
+    "@mui/material": "^5.14.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@mui/x-data-grid": "^6.18.1",
     "@popperjs/core": "~2.11.8",
     "@reduxjs/toolkit": "~1.9.7",
     "axios": "~1.6.0",
@@ -33,6 +38,7 @@
     "redux": "~4.2.1",
     "sass": "~1.69.5",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.1",
     "sweetalert2": "~11.7.32"
   },
   "devDependencies": {
