--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "react-dom": "~18.2.0",
     "react-router-dom": "~6.17.0",
     "react-slick": "^0.29.0",
+    "recharts": "^2.10.3",
     "redux": "~4.2.1",
     "sass": "~1.69.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
-    "sweetalert2": "~11.7.32"
+    "sweetalert2": "~11.7.32",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "~18.2.15",
