--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "sass": "~1.69.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
-    "sweetalert2": "~11.7.32",
+    "sweetalert2": "^11.6.13",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
